[package]
name = "oculus"
version = "0.1.0"
edition = "2024"

[dependencies]
#glados = { path = "/home/drusk/code/arcana/glados" }
hermes = { path = "/home/drusk/code/arcana/hermes" }
spells = { path = "/home/drusk/code/arcana/spells", features = ["ctrl_c"] }
quill = { path = "/home/drusk/code/arcana/quill" }
argus = { path = "/home/drusk/code/arcana/argus", features = ["oculus"] }
#shard-protocol = { path = "/home/drusk/thesis/repos/three/libs/shard-protocol" }
#three-utils = { path = "/home/drusk/thesis/repos/three/libs/three-utils" }

# Errors
color-eyre = "0.6"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1.44", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
  "net",
  "io-util",
] }
tokio-util = "0.7"
futures = "0.3.31"

# Tracing
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
tracing-error = "0.2"

triple_buffer = "8.1.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

eframe = { version = "0.31" }
egui = { version = "0.31" }
egui_extras = { version = "0.31" }
chrono = { version = "0.4", features = ["serde"] }

[features]
tracy-profiler = ["argus/tracy-profiler"]
default = []
